Overflow x and y correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
     background-color:brown ;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 .main_grid {
     display: grid;
